[package]
name = "eaglesong"
version = "0.1.0"
authors = ["rink1969 <rink1969@cryptape.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.2"
blake2b-rs = "0.1.4"

[[bench]]
name = "eaglesong"
harness = false
