[package]
name = "eaglesong"
version = "0.1.0"
authors = ["rink1969 <rink1969@cryptape.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/nervosnetwork/rfcs/blob/master/rfcs/0010-eaglesong/0010-eaglesong.md"
repository = "https://github.com/nervosnetwork/eaglesong"
description = "A Rust Library of Eaglesong Hash Function"
keywords = ["cipher", "cryptography"]

[dependencies]

[dev-dependencies]
criterion = "0.2"
blake2b-rs = "0.1.4"
hex = "0.4"

[[bench]]
name = "eaglesong"
harness = false
